feat: add module information
